--- a/Source/Panama/Resources/Dictionary/Values.xaml
+++ b/Source/Panama/Resources/Dictionary/Values.xaml
@@ -62,8 +62,12 @@
     <filter:TagFilterCombine x:Key="FilterTagCombineAnd">And</filter:TagFilterCombine>
     <filter:TagFilterCombine x:Key="FilterTagCombineAndNot">AndNot</filter:TagFilterCombine>
 
-    <con:PathSelectorType x:Key="FolderEditTypeFileSystem">FileSystem</con:PathSelectorType>
+    <con:PathSelectorType x:Key="FolderEditTypeFileSystem">FileSystemFolder</con:PathSelectorType>
     <con:PathSelectorType x:Key="FolderEditTypeMapi">Mapi</con:PathSelectorType>
+
+    <!-- These two must match the values in DocumentTypeTable.Defs.Values -->
+    <sys:Int64 x:Key="DocTypeWordOpenXmlFileType">1</sys:Int64>
+    <sys:Int64 x:Key="DocTypeExecutable">11</sys:Int64>
     
     <cv:BooleanToVisibilityConverterOptions x:Key="BooleanTrueToVisibility">TrueToVisibility</cv:BooleanToVisibilityConverterOptions>
     <cv:BooleanToVisibilityConverterOptions x:Key="BooleanFalseToVisibility">FalseToVisibility</cv:BooleanToVisibilityConverterOptions>
